k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9113
      targetPort: metrics
