k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
spec:
  ingressClassName: nginx
  rules:
    - host: HOST_PLACEHOLDER # patched per environment
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  name: http
